Fix spacing issue with primary button in SHeet

--- a/src/components/Sheet/Sheet.scss
+++ b/src/components/Sheet/Sheet.scss
@@ -3,7 +3,7 @@ $sheet-desktop-width: rem(380px);
 .Sheet {
   position: fixed;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background: color('white');
   box-shadow: shadow('layer');
